Closed Bug 1780857 Opened 4 years ago Closed 4 years ago

Embedder build broken in js/public/Debug.h if DEBUG not defined

Categories

(Core :: JavaScript Engine, defect)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr102 --- fixed
firefox105 --- fixed

People

(Reporter: ptomato, Assigned: ptomato)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This seems to be a case of #if being used instead of #ifdef. Patch incoming.

The paradigm for DEBUG is that it is defined or not defined, not 1 or 0,
so we have to use ifdef here. Otherwise we get a build error in embedded
SpiderMonkey when DEBUG is not defined.

Assignee: nobody → philip.chimento
Status: NEW → ASSIGNED
Blocks: sm-embedding
Pushed by archaeopteryx@coole-files.de: https://hg.mozilla.org/integration/autoland/rev/41ccea366887 Change if to ifdef for DEBUG. (r=jimb) DONTBUILD
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch

Comment on attachment 9286706 [details]
Bug 1780857 - Change if to ifdef for DEBUG. (r?jimb)

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Without this patch, a common embedder configuration (-UDEBUG) will not build.
  • User impact if declined: In practice, downstream distributors will have to carry this patch anyway.
  • Fix Landed on Version: 105
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This may have an effect on Firefox in case it was built with -DDEBUG=0. (Although if that was the case, the result would probably already not be what the builder intended.)
Attachment #9286706 - Flags: approval-mozilla-esr102?

Comment on attachment 9286706 [details]
Bug 1780857 - Change if to ifdef for DEBUG. (r?jimb)

Approved for 102.2esr.

Attachment #9286706 - Flags: approval-mozilla-esr102? → approval-mozilla-esr102+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: