Bug 1780857 - Change if to ifdef for DEBUG. r=jimb, a=RyanVM

The paradigm for DEBUG is that it is defined or not defined, not 1 or 0,
so we have to use ifdef here. Otherwise we get a build error in embedded
SpiderMonkey when DEBUG is not defined.

Differential Revision: https://phabricator.services.mozilla.com/D152556